Put Story Viewer content in its own JS class.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="js/slick.min.js" type="text/javascript" charset="utf-8"></script>
     <!-- My script -->
     <script src="js/story_script.js"></script>
+    <!-- Viewer Script -->
+    <script src="js/viewer.js"></script>
 </head>
 
 <body>
