filter options mockup in html, architecture of js filter building and filter functionality, began filter building code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
 		test test test
 	</header>
 	<main>
-		
+		<div id = "filterBar" style="background-color: lightblue;">
+            <div class = "filter" id = "SignLanguageFilter">
+                <button>Sign Language</button>
+                <div id = "options">
+                    <input type = "checkbox" name = "sign1" value = "fsl_luzon"> FSL: Luzon <br>
+                    <input type = "checkbox" name = "sign2" value = "fsl_visayas"> FSL: Visayas <br>
+                    <input type = "checkbox" name = "sign3" value = "fsl_mindanao"> FSL: Mindanao <br>
+                </div>
+            </div>
+            
+            <div class = "filter" id = "SortByFilter">
+                <button>Sort By</button>
+                <div id = "options">
+                    <input type = "checkbox" name = "sortBy1" value = "Title"> Title <br>
+                    <input type = "checkbox" name = "sortBy2" value = "Author"> Author <br>
+                    <input type = "checkbox" name = "sortBy3" value = "DatePublished"> Date Published <br>
+                    <input type = "checkbox" name = "sortBy4" value = "LastUpdated"> Last Updated <br>
+                    <input type = "checkbox" name = "sortBy5" value = "Relevance"> Relevance <br>
+                </div>
+            </div>
+
+        </div>
 	</main>
 	<footer>
 		
