--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<script type="text/javascript" src="./config.js"></script>
 	<script type="text/javascript">
 		System.import('js/_Main.js');
+        //System.import('js/Filter.js');
 	</script>
+    
 </head>
 <body>
 	<header>
@@ -13,15 +15,6 @@
 	</header>
 	<main>
 		<div id = "filterBar" style="background-color: lightblue;">
-            <div class = "filter" id = "SignLanguageFilter">
-                <button>Sign Language</button>
-                <div id = "options">
-                    <input type = "checkbox" name = "sign1" value = "fsl_luzon"> FSL: Luzon <br>
-                    <input type = "checkbox" name = "sign2" value = "fsl_visayas"> FSL: Visayas <br>
-                    <input type = "checkbox" name = "sign3" value = "fsl_mindanao"> FSL: Mindanao <br>
-                </div>
-            </div>
-            
             <div class = "filter" id = "SortByFilter">
                 <button>Sort By</button>
                 <div id = "options">
