--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/module.css">
 	<script type="text/javascript" src="./jspm_packages/system.js"></script>
 	<script type="text/javascript" src="./config.js"></script>
 	<script type="text/javascript">
 		System.import('js/_Main.js');
-        //System.import('js/Filter.js');
 	</script>
     
 </head>
@@ -14,7 +14,14 @@
 		test test test
 	</header>
 	<main>
-		<div id = "filterBar" style="background-color: lightblue;">
+		<div class = "filterBar">
+        </div>
+        <div class = "results">
+            <p>fsl_luzon</p>
+            <p>fsl_visayas</p>
+            <p>fsl_mindanao</p>
+            <p>fsl_luzon</p>
+            <p>ASL</p>
         </div>
 	</main>
 	<footer>
