Added non styled Carousel module

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./jspm_packages/system.js"></script>
 	<script type="text/javascript" src="./config.js"></script>
+    
 	<script type="text/javascript">
 		System.import('js/_Main.js');
 	</script>
@@ -12,7 +14,8 @@
 		test test test
 	</header>
 	<main>
-		
+		<div id="templateResult">Template results go here...</div>
+        <div id="templateResultTwo">Template results go here...</div>
 	</main>
 	<footer>
 		
