--- a/html/carouselTemplate.html
+++ b/html/carouselTemplate.html
@@ -1,5 +1,5 @@
-<div id="carousel-<%- id %>">
-    <button class="left"> Left </button>
-    <div class="imageHolder"></div>
-    <button class="right"> Right</button>
+<div id="carousel-<%- id %>" style="align-content: center">
+    <button class="left" style = "background-color: blue; border-color: blue; display: inline-block; width: 12%"> <img src = "img/icons/prev.png" style=" height: 50%; width: 50%; padding-bottom: 30%"/> </button>
+    <div class="imageHolder" style = "display: inline-block; width: 70%" ></div>
+    <button class="right" style = "background-color: blue; border-color: blue; display: inline-block; width: 12%; text-align: center"><img src = "img/icons/next.png " style=" height: 50%; width: 50%; padding-bottom: 30%" /> </button>
 </div>
