multi select filters fully work

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 		<div class = "filterBar">
         </div>
         <div class = "results">
-            <p>fsl_luzon</p>
-            <p>fsl_visayas</p>
-            <p>fsl_mindanao</p>
-            <p>fsl_luzon</p>
-            <p>ASL</p>
+            fsl_luzon
+            fsl_visayas
+            fsl_mindanao
+            fsl_luzon
+            ASL
+            ENglish
+            english
+            English
+            tagalog
         </div>
 	</main>
 	<footer>
