--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript" src="./jspm_packages/system.js"></script>
 	<script type="text/javascript" src="./config.js"></script>
-    
 	<script type="text/javascript">
-		System.import('js/_Main.js');
+		System.import('./js/_Main.js');
 	</script>
 </head>
 <body>
 	<header>
-		test test test
+		Placeholder Header
 	</header>
 	<main>
 		<div id="templateResult">Template results go here...</div>
         <div id="templateResultTwo">Template results go here...</div>
+        <div id="stories" style="width: 80%; margin: 10px auto"></div>
 	</main>
 	<footer>
-		
+		Placeholder Footer
 	</footer>
 </body>
 </html>
