--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript">
 		System.import('js/_Main.js');
 	</script>
+    <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
 	<header>
