--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="css/filter.css">
+    <link rel="stylesheet" type="text/css" href="css/Filter.css">
 	<script type="text/javascript" src="./jspm_packages/system.js"></script>
 	<script type="text/javascript" src="./config.js"></script>
 	<script type="text/javascript">
@@ -13,8 +13,7 @@
 	<header>
 	</header>
 	<main>
-		<div class = "filterBar">
-        </div>
+		<div class = "filterBar"></div>
         <div class = "results">
         
         </div>
