--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <main>
         <div id="templateResult">Template results go here...</div>
         <div id="templateResultTwo">Template results go here...</div>
-        <div class="filterBar"> </div>
+        <div id="sectionHead">More Stories</div>
+        <div class="filterBar"></div>
         <div id="stories" style="width: 80%; margin: 10px auto"></div>
     </main>
     <footer>
