--- a/html/carouselTemplate.html
+++ b/html/carouselTemplate.html
@@ -1,5 +1,5 @@
 <div id="carousel-<%- id %>" class="carousel">
-    <button class="left" s> <img class="carouselNav" src = "img/icons/prev.png" style=""/> </button>
+    <button class="left" > <img class="carouselNav" src = "img/icons/prev.png" style=""/> </button>
     <div class="imageHolder" ></div>
     <button class="right"><img class="carouselNav" src = "img/icons/next.png " /> </button>
 </div>
