Language Select and Some cleanup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 	<header>
-		Placeholder Header
+		<span lang="en">Placeholder Header</span>
+		<span lang="tl">Placeholder Header (but in tagalog!)</span>
 	</header>
 	<main>
 		<div id="templateResult">Template results go here...</div>
@@ -18,7 +19,8 @@
         <div id="stories" style="width: 80%; margin: 10px auto"></div>
 	</main>
 	<footer>
-		Placeholder Footer
+		<span lang="en">Placeholder Footer</span>
+		<span lang="tl">Placeholder Footer (but in tagalog!)</span>
 	</footer>
 </body>
 </html>
