--- a/html/StoryPreview.html
+++ b/html/StoryPreview.html
@@ -1,7 +1,6 @@
 <div id="<%- id %>" class="story-preview">
 	<a href="./story?id=<%- story.id %>">
-		<div class="cover-image-container">
-			<img class="cover-image" src="<%- story.coverImage %>" />
+		<div class="cover-image-container" style="background-image: url(<%- story.coverImage %>)">
 			<button class="info-button">i</button>
 		</div>
 
