--- a/Page.html
+++ b/Page.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+	<title>World Around You</title>
+	<link rel="stylesheet" href="style/Main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
 	<script type="text/javascript" src="./jspm_packages/system.js"></script>
 	<script type="text/javascript" src="./config.js"></script>
 	<script type="text/javascript">
-		System.import('./js/_Main.js');
+		System.import('./js/Client/Header.js');
 	</script>
 </head>
 <body>
