--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -1,18 +1,18 @@
 <nav>
-	<div class=""><a href="./Stories"><span class="nav-icon" id="stories"></span></a></div>
-	<div class=""><a href="./Games"><span class="nav-icon" id="games"></span></a></div>
+	<div class=""><a href="./Stories"><span class="nav-icon" id="nav-stories-icon"></span></a></div>
+	<div class=""><a href="./Games"><span class="nav-icon" id="nav-games-icon"></span></a></div>
 	<div class="" id="nav-user">
-		<span class="nav-icon" id="user"></span>
-		<span id="user-links">
+		<span class="nav-icon" id="nav-user-icon"></span>
+		<span id="nav-user-links">
 			<div><a href="./Login">Log In</a></div>
 			<div><a href="./Login">Log Out</a></div>
 		</span>
 	</div>
 	<div class="" id="nav-search">
 		<form action="./search">
-			<input id="serach" type="text" name="search" />
-			<input id="submit" type="submit" value="" />
+			<input id="nav-serach-input" type="text" name="search" />
+			<input id="nav-submit-input" type="submit" value="" />
 		</form>
 	</div>
-	<div class=""><a href="./Edit"><span class="nav-icon" id="games"></span></a></div>
+	<div class=""><a href="./Edit"><span class="nav-icon" id="nav-games-icon"></span></a></div>
 </nav>
