re-did some of the styling

--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -1,6 +1,5 @@
-
-	<div id="templateResult">Template results go here...</div>
-	<div id="templateResultTwo">Template results go here...</div>
-	<div id="sectionHead">More Stories</div>
-	<div class="filterBar"></div>
-	<div id="stories" style="width: 80%; margin: 10px auto"></div>
+<div id="new-stories"></div>
+<div id="new-stories2"></div>
+<div id="more-stories">More Stories</div>
+<div id="filter-bar"></div>
+<div id="stories" style="width: 80%; margin: 10px auto"></div>
