--- a/html/carouselTemplate.html
+++ b/html/carouselTemplate.html
@@ -1,7 +1,7 @@
 <div id="carousel-<%- id %>" class="carousel">
-    <button class="left" > <img class="carouselNav" src = "img/icons/prev.png" style=""/> </button>
-    <div class="imageHolder" ></div>
-    <button class="right"><img class="carouselNav" src = "img/icons/next.png " /> </button>
+    <button class="carousel-nav left" > <img class="carousel-nav-img" src = "img/icons/prev.png" style=""/> </button>
+    <div class="image-holder" ></div>
+    <button class="carousel-nav right"><img class="carousel-nav-img" src = "img/icons/next.png " /> </button>
 </div>
 
 
