Updated Sign up

--- a/html/Client/LogInPage.html
+++ b/html/Client/LogInPage.html
@@ -17,7 +17,7 @@
     <input class="register" type="usr" placeholder="Enter Username" name="uname" required>
 
     <input class="register" type="password" placeholder="Enter Password" name="psw" required>
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
+    <button  style="width:auto;">Sign Up</button>
     <h3> Already a user? Sign in here: </h3>
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign In</button>
 
