--- a/html/Client/LogInPage.html
+++ b/html/Client/LogInPage.html
@@ -28,17 +28,17 @@
 
             <div class="container">
                 <label for="uname"><b>Username</b></label>
-                <input type="text" placeholder="Enter Username" name="uname" required>
+                <input type="usr" placeholder="Enter Username" name="uname" required>
 
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="psw" required>
 
-                <button type="submit">Login</button>
+                <button id = "containedButton" type="submit">Login</button>
 
             </div>
 
             <div class="container" style="background-color:#0098ba">
-                <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+                <button id = "containedCancel" type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
 
             </div>
         </form>
