viewer more structure

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -15,7 +15,29 @@
     <header>
     </header>
     <main>
-        <div id ="viewer"></div>
+        <div id ="viewer">
+            <div class="viewerNav">
+                <button  id="back">
+                    <img id="btn">
+                    <img id="icon">
+                    <span id ="num"></span>
+                </button>
+            </div>
+            <div id="content">
+                <div id="currentOverlay"></div>
+                <div id="video"></div>
+                <div id="story"></div>
+                <button id="storyToggle"></button>
+            </div>
+            <div class="viewerNav">
+                 <button id="forward">
+                    <img id="icon">
+                    <span id ="num"></span>
+                    <img id="btn">
+                </button>
+            </div>
+        </div>
+        <div id="viewerBar"></div>
         <div id ="details"></div>
         <div id ="more-stories"></div>
     </main>
