view page now has droperly styled and positioned story, text, overlay, and index areas

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -8,10 +8,17 @@
         </button>
     </div>
     <div class="content">
-        <div id="currentOverlay"></div>
-        <div id="video"></div>
-        <div id="story"></div>
-        <button id="storyToggle"></button>
+        <div id="currentOverlay">
+            <img src="../../img/icons/language.png">
+            <span>1</span>
+        </div>
+        <video src="../../videos/Malakas_Maganda/fsl_luzon/0.mp4" controls></video>
+        <div id="story">
+            I write the best placeholder text, and I'm the biggest developer on the web by far... While that's mock-ups and this is politics, are they really so different? -Trump Ipsum
+        </div>
+        <button id="storyToggle">
+            <img src="../../img/icons/minimize.png">
+        </button>
     </div>
     <div class="viewerNav" id="forward">
         <button>
@@ -21,7 +28,26 @@
         </button>
     </div>
 </div>
-<div id="viewerBar"></div>
+<div id="viewerBar">
+    <div id="index">
+        <div id="holder">
+            <span id="current">1</span>
+            <span id ="slash"></span>
+            <span id="total">10</span>
+        </div>
+    </div>
+    <div id="optionBtns">
+        <button id ="writtenLang">
+            <img src="../../img/icons/language.png">
+        </button>
+        <button id ="signLang">
+            <img src="../../img/icons/language.png">
+        </button>
+        <button id ="expand">
+            <img src="../../img/icons/minimize.png">
+        </button>
+    </div>
+</div>
 <div id="details">
 
     <h2 id="title"> Video Name</h2>
