--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -2,15 +2,15 @@
 
     <div class="viewerNav" id="back">
         <button>
-            <img id="btn">
-            <img id="icon">
-            <span id="num"></span>
+            <img id="btn" src="../../img/icons/prev.png">
+            <img id="icon" src="../../img/icons/replay.png">
+            <span id="num">1</span>
         </button>
     </div>
     <div class="content">
         <div id="currentOverlay">
             <img src="../../img/icons/language.png">
-            <span>1</span>
+            <span>2</span>
         </div>
         <video src="../../videos/Malakas_Maganda/fsl_luzon/0.mp4" controls></video>
         <div id="story">
@@ -24,16 +24,16 @@
     </div>
     <div class="viewerNav" id="forward">
         <button>
-            <img id="icon">
-            <span id="num"></span>
-            <img id="btn">
+            <img id="btn" src="../../img/icons/next.png">
+            <img id="icon" src="../../img/icons/replay.png">
+            <span id="num">3</span>
         </button>
     </div>
 </div>
 <div id="viewerBar">
     <div id="index">
         <div id="holder">
-            <span id="current">1</span>
+            <span id="current">2</span>
             <span id ="slash"></span>
             <span id="total">10</span>
         </div>
