Added like click functionality, as well as cleaned up story description and added carousels

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -56,10 +56,10 @@
         <img />
         <h2 id = "uploader"> <img id ="authorImage" src = "img/icons/user.png" />Uploader Name</h2>
         <div id = "social">
-            <div class = "social">
+            <div class = "social" >
             <img src = "img/icons/user.png" /><span id = "views">Views</span>
             </div>
-            <div class = "social">
+            <div class = "social" id = "likeClick">
              <img src = "img/icons/user.png" /><span id = "likes">Likes</span>
             </div>
             <div class = "socialExport">
@@ -87,3 +87,4 @@
 
 
 <div id="more-stories"></div>
+<div id="more-author"></div>
