fullscreen mode for viewer

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -45,7 +45,7 @@
         <button id ="signLang">
             <img src="../../img/icons/language.png">
         </button>
-        <button id ="expand">
+        <button id ="fullscreen">
             <img src="../../img/icons/minimize.png">
         </button>
     </div>
