--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -9,8 +9,8 @@
 		</span>
 	</div>
 	<div class="" id="nav-search">
-		<form action="./search">
-			<input id="nav-serach-input" type="text" name="search" />
+		<form action="./Search">
+			<input id="nav-serach-input" type="text" name="s" />
 			<input id="nav-submit-input" type="submit" value="" />
 		</form>
 	</div>
