images dont lose aspect ratio anymore, json passes into viewer, began populating viewer with data from json

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -12,7 +12,11 @@
             <img src="../../img/icons/language.png">
             <span>2</span>
         </div>
-        <video src="../../videos/Malakas_Maganda/fsl_luzon/0.mp4" controls></video>
+        <div id = "visuals">
+            <video src="" controls></video>
+            <img src="">
+        </div>
+        
         <div id="story">
             I write the best placeholder text, and I'm the biggest developer on the web by far... While that's mock-ups and this is politics, are they really so different? -Trump Ipsum
         </div>
