--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -34,7 +34,27 @@
         </button>
     </div>
 </div>
-  <div id="id01" class="modal">
+<div id="viewerBar">
+    <div id="index">
+        <div id="holder">
+            <span id="current">2</span>
+            <span id ="slash"></span>
+            <span id="total">10</span>
+        </div>
+    </div>
+    <div id="optionBtns">
+        <button id ="writtenLang">
+            <img src="../../img/icons/language.png">
+        </button>
+        <button id ="signLang">
+            <img src="../../img/icons/language.png">
+        </button>
+        <button id ="fullscreen">
+            <img src="../../img/icons/minimize.png">
+        </button>
+    </div>
+</div>
+<div id="id01" class="modal">
 
         <form class="modal-content animate" action="/action_page.php">
          
@@ -51,7 +71,7 @@
                 <div id = "mediaContainer">
                     <div class = "media">
                         <video id = "videoContainer" autoplay muted>
-                    <source id = "videoLoop" type="video/mp4">
+                    <source id = "videoLoop" type="video/mp4" src="../../videos/Malakas_Maganda/fsl_luzon/1.mp4">
                     </video>
                     </div>
                  <div id = "mediaImage">
@@ -63,26 +83,6 @@
             </div>
         </form>
     </div>
-<div id="viewerBar">
-    <div id="index">
-        <div id="holder">
-            <span id="current">2</span>
-            <span id ="slash"></span>
-            <span id="total">10</span>
-        </div>
-    </div>
-    <div id="optionBtns">
-        <button id ="writtenLang">
-            <img src="../../img/icons/language.png" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">
-        </button>
-        <button id ="signLang">
-            <img src="../../img/icons/language.png">
-        </button>
-        <button id ="fullscreen">
-            <img src="../../img/icons/minimize.png">
-        </button>
-    </div>
-</div>
   <div id ="details">
             
         <h1 id = "title">Video Name</h1>
