--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -38,7 +38,7 @@
     <div id="index">
         <div id="holder">
             <span id="current">2</span>
-            <span id ="slash"></span>
+            <span id ="slash">/</span>
             <span id="total">10</span>
         </div>
     </div>
