text toggle restyle

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -17,14 +17,15 @@
             <img src="">
         </div>
         
+        <div id="storyToggle">
+            <button>
+                <img src="../../img/icons/minimize.png">
+            </button>
+        </div>
+        
         <div id="story">
             I write the best placeholder text, and I'm the biggest developer on the web by far... While that's mock-ups and this is politics, are they really so different? -Trump Ipsum
         </div>
-
-
-        <button id="storyToggle">
-            <img src="../../img/icons/minimize.png">
-        </button>
     </div>
     <div class="viewerNav" id="forward">
         <button>
