lol forgot to push: better transitions between screens, got closer to fixing fullscreen

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -13,13 +13,13 @@
             <span>2</span>
         </div>
         <div id = "visuals">
-            <video src="" controls></video>
+            <video id = "primeVid" src="" controls></video>
             <img src="">
         </div>
         
         <div id="storyToggle">
             <button>
-                <img src="../../img/icons/minimize.png">
+                <img src="../../img/icons/replay.png">
             </button>
         </div>
         
