--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -1,9 +1,11 @@
 <nav>
-	<div class=""><a href="./Stories"><span class="nav-icon" id="nav-stories-icon"></span></a></div>
-	<div class=""><a href="./Games"><span class="nav-icon" id="nav-games-icon"></span></a></div>
+	<div class=""><a href="./Stories"><span class="nav-icon" id="nav-stories-icon"><img src ="../../img/icons/NavBar/nav_stories.svg"></span></a></div>
+	<div class=""><a href="./Games"><span class="nav-icon" id="nav-games-icon"><img src ="../../img/icons/NavBar/nav_games.svg"></span></a></div>
 	<div class="" id="nav-user">
-		<span class="nav-icon" id="nav-user-icon"></span>
+        
+		<span class="nav-icon" id="nav-user-icon"><img src ="../../img/icons/NavBar/nav_acct.svg"></span>
 		<span id="nav-user-links">
+            
 			<div><a href="./Login">Log In</a></div>
 			<div><a href="./Login">Log Out</a></div>
 		</span>
@@ -11,8 +13,8 @@
 	<div class="" id="nav-search">
 		<form action="./search">
 			<input id="nav-serach-input" type="text" name="search" />
-			<input id="nav-submit-input" type="submit" value="" />
+			<input id="nav-submit-input" type="image" value="" src = "../../img/icons/search.png" />
 		</form>
 	</div>
-	<div class=""><a href="./Edit"><span class="nav-icon" id="nav-games-icon"></span></a></div>
+	<div class=""><a href="./Edit"><span class="nav-icon" id="nav-games-icon"><img src ="../../img/icons/NavBar/nav_SB.svg"></span></a></div>
 </nav>
