HoverSwap functional for rest of viewer icons

--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -2,8 +2,9 @@
 
     <div class="viewerNav" id="back">
         <button>
-            <img id="btn" src="../../img/icons/prev.png">
-            <img id="icon" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
+            <img id="btn" src="../../img/icons/General/icon_Page_Back.svg">
+            <img class="icon" id="sign" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
+            <img class="icon" id="cover" src="../../img/icons/StoryViewer/icon_SV_Page_Image.svg">
             <span id="num">1</span>
         </button>
     </div>
@@ -19,7 +20,8 @@
         
         <div id="storyToggle">
             <button>
-                <img src="../../img/icons/StoryViewer/icon_SV_ShowText.svg">
+                <img id = "show" src="../../img/icons/StoryViewer/icon_SV_ShowText.svg">
+                <img id = "hide" src="../../img/icons/StoryViewer/icon_SV_HideText.svg">
             </button>
         </div>
         
@@ -29,8 +31,9 @@
     </div>
     <div class="viewerNav" id="forward">
         <button>
-            <img id="btn" src="../../img/icons/next.png">
-            <img id="icon" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
+            <img id="btn" src="../../img/icons/General/icon_Page_Next.svg">
+            <img class="icon" id="sign" src="../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg">
+            <img class="icon" id="cover" src="../../img/icons/StoryViewer/icon_SV_Page_Image.svg">
             <span id="num">3</span>
         </button>
     </div>
