Fixed login page to make header work

--- a/html/Client/LogInPage.html
+++ b/html/Client/LogInPage.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+<div id = "loginHolder">
+    
     <h2>Sign up for World Around You</h2>
     <h3>To register, enter your email below:</h3>
 
@@ -50,7 +51,7 @@
             }
         }
     </script>
-
+</div>
 </body>
 
 </html>
