carousle nav buttons have hover icon functionality

--- a/html/Client/Carousel.html
+++ b/html/Client/Carousel.html
@@ -1,5 +1,5 @@
 <div id="carousel-<%- id %>" class="carousel">
-    <button class="carousel-nav left" > <img class="carousel-nav-img" src = "img/icons/prev.png" style=""/></button>
+    <button class="carousel-nav left" > <img class="carousel-nav-img" src = "../../img/icons/General/icon_Page_Back.svg" style=""/></button>
     <div class="image-holder" ></div>
-    <button class="carousel-nav right"><img class="carousel-nav-img" src = "img/icons/next.png " /></button>
+    <button class="carousel-nav right"><img class="carousel-nav-img" src = "../../img/icons/General/icon_Page_Next.svg" /></button>
 </div>
