updates to search page

--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -13,9 +13,9 @@
 		</span>
 	</div>
 	<div class="" id="nav-search">
-		<form action="./search">
+		<form action="./Search">
 			<input id="nav-serach-input" type="text" name="search" />
-			<input id="nav-submit-input" type="image" value="" />
+			<input id="nav-submit-input" type="submit" value="" />
 		</form>
 	</div>
 	<div class=""><a href="./Edit"><button class="nav-icon" id="nav-edit-icon"></button></a></div>
