--- a/html/Client/Search.html
+++ b/html/Client/Search.html
@@ -1,6 +1,8 @@
 <div id="search-bar">
-	<input id="search-input" type="text" name="search" />
-	<button id="submit-search"></button>
+	<form id="search-wrapper" action="./Search">
+		<input id="search-input" type="text" name="search" />
+		<input id="search-submit" type="submit" value="" />
+	</form>
 </div>
 <div id="filter-bar"></div>
 <div id="stories" style="width: 80%; margin: 10px auto"></div>
