Replaced home page story grid with modular version.
Tweaks to storygrid to support other story previews on page.

--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -2,4 +2,4 @@
 <div id="new-stories2"></div>
 <div id="more-stories">More Stories</div>
 <div id="filter-bar"></div>
-<div id="stories" style="width: 80%; margin: 10px auto"></div>
+<div id="stories"></div>
