Styling tweak to story grid. Added storygrid to search results page.

--- a/html/Client/Search.html
+++ b/html/Client/Search.html
@@ -5,4 +5,4 @@
 	</form>
 </div>
 <div id="filter-bar"></div>
-<div id="stories" style="width: 80%; margin: 10px auto"></div>
+<div id="stories"></div>
