--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -1,5 +1,4 @@
 <div id="new-stories"></div>
-<div id="new-stories2"></div>
-<div id="more-stories">More Stories</div>
+<div id="more-stories-title">More Stories</div>
 <div id="filter-bar"></div>
 <div id="stories"></div>
