login and register updates and started story editor

--- a/html/Client/Edit.html
+++ b/html/Client/Edit.html
@@ -3,7 +3,7 @@
 	<p>Follow a series of simple steps to build a new story. <br/>
 		You can publish the story after you add all the required elements.
 	</p>
-	<button type="button" id="get-started">Get Started</button>
+	<a id="get-started" href="./Editor">Get Started</a>
 </div>
 
 <div id="edit-story-info">
