--- a/html/Client/StoryPreview.html
+++ b/html/Client/StoryPreview.html
@@ -1,5 +1,5 @@
 <div id="<%- id %>" class="story-preview">
-	<a href="./View?id=<%- story.id %>">
+	<a href="./<%- launchToEditor ? 'Editor' : 'View' %>?id=<%- story.id %>">
 		<div class="cover-image-container" style="background-image: url(<%- story.coverImage %>)">
 			<button class="info-button">i</button>
 		</div>
