replaced header with one for game

--- a/html/Client/BusGame.html
+++ b/html/Client/BusGame.html
@@ -1,1 +1,14 @@
+<div class = "title">
+    <span>Spot the Sign!</span>
+</div>
 <div></div>
+<div class = "buttons">
+    <div class = "centered">
+        <button id ="playBtn">
+            <img src="../../img/icons/General/icon_Page_Next.svg">
+        </button>
+        <button id ="playBtn">
+            <img src="../../img/icons/General/icon_Info.svg">
+        </button>
+    </div>
+</div>
