--- a/html/Client/Editor/Cover.html
+++ b/html/Client/Editor/Cover.html
@@ -1,13 +1,16 @@
-<div id="editor-content-wrapper">
-	<h1>Upload Cover</h1>
-	<div id="cover-image-container" class="half" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);">
-		<div id="cover-image-input-container">
-			<input id="cover-image-input" type="file" name="coverimage" accept="image/*">
-			<button id="cover-image-button">Upload image</button>
+<div id="cover-content" class="editor-content-wrapper">
+	<h1 class="main-header">Upload Cover</h1>
+	<div class="main-content">
+		<div id="cover-image-container" class="half" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);">
+			<div id="cover-image-input-container">
+				<input id="cover-image-input" type="file" name="coverimage" accept="image/*">
+				<button id="cover-image-button">Upload image</button>
+			</div>
+		</div>
+		<div class="half">
+			<div class="quarter"><label>Author</label></div>
+			<div class="three-quarters"><input id="author-input" type="text" name="author" value="<%- author %>"></div>
 		</div>
 	</div>
-	<div class="half">
-		<label>Author</label>
-		<input id="author-input" type="text" name="author" value="<%- author %>">
-	</div>
 </div>
+<button id="save-cover" class="save-button" <%- unsavedChanges ? '' : 'disabled' %>>Save Changes</button>
