Most of style changes brought by Art Review. Half of offline mode.

--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -2,3 +2,34 @@
 <div id="more-stories-title">More Stories</div>
 <div id="filter-bar"></div>
 <div id="stories"></div>
+
+<script src="../../upup.min.js"></script>
+<script>
+UpUp.start({
+  'content-url': '../../html/Client/ViewerOffline.html',
+  'assets': ['../../style/viewer.css',
+  			'../../js/Client/ServiceWorkerDOM.js',
+  			'../../js/Client/viewerOffline.js',
+  			'../../js/Client/Carousel.js',
+  			'../../js/Client/StoryViewer.js',
+  			'../../js/Client/HelperFunctions.js',
+  			'../../js/Client/StoryPreview.js',
+  			'../../js/jquery-ui.min.js',
+  			'../../img/icons/General/icon_Page_Back.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_Page_Image.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_CoverImage.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_ShowText.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_HideText.svg',		
+  			'../../img/icons/General/icon_Page_Next.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_WrittenLang.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_SignLang.svg',		
+  			'../../img/icons/StoryViewer/icon_SV_Fullscreen.svg',		
+  			'../../img/icons/user.png',		
+  			'../../img/icons/SocialMedia/icon_SM_Views.svg',		
+  			'../../img/icons/SocialMedia/icon_SM_Likes.svg',		
+  			'../../img/icons/SocialMedia/icon_SM_Save.svg',		
+  			'../../img/icons/SocialMedia/icon_SM_Share.svg',		
+  			]
+});
+</script>
