--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -1,5 +1,5 @@
 <div id="logo-wrapper">
-	<span lang='en'><img id="logo" src="../../img/icons/NavBar/WAY_logo.svg"></span>
+	<a href="./Stories"><span lang='en'><img id="logo" src="../../img/icons/NavBar/WAY_logo.svg"></span></a>
 </div>
 <nav>    
 	<div class=""><a href="./Stories"><button class="nav-icon" id="nav-stories-icon"></button></a></div>
