Updated menu screens and added images

--- a/html/Client/BusGame.html
+++ b/html/Client/BusGame.html
@@ -1,7 +1,7 @@
 <div class = "title">
     <span>Spot the Sign!</span>
 </div>
-<div></div>
+<div id = "pageContent"></div>
 <div class = "buttons">
     <div class = "centered">
         <button id ="playBtn">
