Header fix to only show edit button if logged in

--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -28,5 +28,7 @@
 			<input id="nav-submit-input" type="submit" value="" />
 		</form>
 	</div>
-	<div class=""><a href="./Edit"><button class="nav-icon" id="nav-edit-icon"></button></a></div>
+	<% if(user){ %>
+		<div class=""><a href="./Edit"><button class="nav-icon" id="nav-edit-icon"></button></a></div>
+	<% } %>
 </nav>
