--- a/html/Client/Editor/Cover.html
+++ b/html/Client/Editor/Cover.html
@@ -1,10 +1,10 @@
 <div id="cover-content" class="editor-content-wrapper">
 	<h1 class="main-header">Upload Cover</h1>
 	<div class="main-content">
-		<div id="cover-image-container" class="half" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);">
-			<div id="cover-image-input-container">
-				<input id="cover-image-input" type="file" name="coverimage" accept="image/*">
-				<button id="cover-image-button">Upload image</button>
+		<div class="cover-image-container half" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);">
+			<div id="cover-image-input-container" class="upload-input-container">
+				<input id="cover-image-input" class="upload-input" type="file" name="coverimage" accept="image/*">
+				<button id="cover-image-button" class="upload-button">Upload image</button>
 			</div>
 		</div>
 		<div class="half">
