--- a/html/Client/Editor/Metadata.html
+++ b/html/Client/Editor/Metadata.html
@@ -40,7 +40,7 @@
 			</div>
 		</div>
 		<div class="third">
-			<div id="cover-image-container" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);"></div>
+			<div class="cover-image-container" style="background-image: url(<%- coverImage ? coverImage : './img/icons/StoryBuilder/icon_SB_ImagePlaceholder.svg' %>);"></div>
 		</div>
 	</div>
 </div>
