--- a/html/Client/Editor/Pages.html
+++ b/html/Client/Editor/Pages.html
@@ -3,7 +3,7 @@
 	<div class="main-content">
 		<div class="quarter">
 			<div class="page-nav"></div>
-			<div id="page-preview">
+			<div id="pages-preview">
 				<div class="half"><button id="" class="add-page-button">+<br/>add page</button></div>
 			</div>
 			<div id="page-legend">
@@ -14,7 +14,7 @@
 		</div>
 		<div class="three-quarters">
 			<div class="page-nav">
-				<div class="quarter"><button class="page-nav-button active" page-type="text">Text & Image</button></div>
+				<div class="quarter"><button class="page-nav-button active" page-type="written">Text & Image</button></div>
 				<div class="quarter"><button class="page-nav-button" page-type="sign">Sign</button></div>
 				<div class="quarter"><button class="page-nav-button" page-type="glossary">Glossary</button></div>
 			</div>
