--- a/html/Client/BusGame_Directions.html
+++ b/html/Client/BusGame_Directions.html
@@ -1,7 +1,7 @@
 <div class = "title">
     <span>How to Play</span>
 </div>
-<div id = "pageContentScore"> 4/6 Matches!</div>
+<div id = "pageContent"> Click on the bus windows to match each sign to the correct word!</div>
 <div class = "buttons">
     <div class = "centered">
         <div class = "imageContainer">
