--- a/html/Client/BusGame_Title.html
+++ b/html/Client/BusGame_Title.html
@@ -2,13 +2,13 @@
     <span>Spot the Sign!</span>
 </div>
 <div id = "busStop">
-<img id = "bus" src="../../img/games/BusGame/Buses/bus_green_facingRight.png">
+<img id = "bus" src="../../img/games/BusGame/Menu/MenuBus.png">
 </div>
 
 <div class = "buttons">
     <div class = "centered">
         <div class = "imageContainer">
-                <img src="../../img/games/BusGame/Menu/playbutton_BusGame-05.png">
+                <img id = "playButton" src="../../img/games/BusGame/Menu/playbutton_BusGame-05.png">
         </div>
             <div class = "imageContainer">
                 <img src="../../img/games/BusGame/Menu/howtoplaybutton_BusGame-05.png">
