Added state transition hookups for game

--- a/html/Client/BusGame_Directions.html
+++ b/html/Client/BusGame_Directions.html
@@ -5,7 +5,7 @@
 <div class = "buttons">
     <div class = "centered">
         <div class = "imageContainer">
-                <img src="../../img/games/BusGame/Menu/playbutton_BusGame-05.png">
+                <img id = "playButton" src="../../img/games/BusGame/Menu/playbutton_BusGame-05.png">
         </div>
             
  
