--- a/html/Client/BusGame_Title.html
+++ b/html/Client/BusGame_Title.html
@@ -11,7 +11,7 @@
                 <img id = "playButton" src="../../img/games/BusGame/Menu/playbutton_BusGame-05.png">
         </div>
             <div class = "imageContainer">
-                <img src="../../img/games/BusGame/Menu/howtoplaybutton_BusGame-05.png">
+                <img id = "instructionsButton" src="../../img/games/BusGame/Menu/howtoplaybutton_BusGame-05.png">
         </div>
  
     </div>
