--- a/html/Client/Editor/PagePreview.html
+++ b/html/Client/Editor/PagePreview.html
@@ -26,6 +26,6 @@
 		</div>
 	</button>
 	<% if(includeDelete){ %>
-		<button class="page-delete-button" page-index="<%- pageIndex %>">x</button>
+		<button class="page-delete-button delete-button" page-index="<%- pageIndex %>"></button>
 	<% } %>
 </div>
