--- a/html/Client/Editor/Pages.html
+++ b/html/Client/Editor/Pages.html
@@ -4,7 +4,7 @@
 		<div class="quarter">
 			<div class="page-nav"></div>
 			<div id="pages-preview">
-				<div class="half"><button id="" class="add-page-button">+<br/>add page</button></div>
+				<div><button id="" class="add-page-button">+<br/>add page</button></div>
 			</div>
 			<div id="page-legend">
 				<div class="page-icon added"> = added</div>
