--- a/html/Client/StoryPreview.html
+++ b/html/Client/StoryPreview.html
@@ -1,6 +1,6 @@
 <div id="<%- id %>" class="story-preview">
 	<a href="./<%- launchToEditor ? 'Editor' : 'View' %>?id=<%- story.id %>">
-		<div class="cover-image-container" style="background-image: url(<%- story.coverImage %>)">
+		<div class="cover-image-container" style="background-image: url(<%- story.coverimage %>)">
 			<button class="info-button">i</button>
 		</div>
 
