2nd pass styling changes to main site, progress on offline build.

--- a/html/Client/Edit.html
+++ b/html/Client/Edit.html
@@ -1,8 +1,6 @@
 <div id="new-story-info">
 	<h2>Build a New Story</h2>
-	<p>Follow a series of simple steps to build a new story. <br/>
-		You can publish the story after you add all the required elements.
-	</p>
+	<p>Follow a series of steps to build a new story.</p>
 	<a id="get-started" href="./Editor">Get Started</a>
 </div>
 
