--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -3,7 +3,7 @@
 </div>
 <nav>    
 	<div class=""><a href="./Stories"><button class="nav-icon" id="nav-stories-icon"></button></a></div>
-	<div class=""><a href="./Games"><button class="nav-icon" id="nav-games-icon"></button></a></div>
+	<!--<div class=""><a href="./Games"><button class="nav-icon" id="nav-games-icon"></button></a></div>-->
 	<div class="" id="nav-user">
         
 		<button class="nav-icon" id="nav-user-icon"></button>
