--- a/html/Client/Stories.html
+++ b/html/Client/Stories.html
@@ -7,19 +7,14 @@
 <script>
 UpUp.start({
   'content-url': '../../html/Client/ViewerOffline.html',
-  'assets': ['../../style/viewer.css',
-  			'../../js/Client/ServiceWorkerDOM.js',
-  			'../../js/Client/viewerOffline.js',
-  			'../../js/Client/Carousel.js',
-  			'../../js/Client/StoryViewer.js',
-  			'../../js/Client/HelperFunctions.js',
-  			'../../js/Client/StoryPreview.js',
+  'assets': ['../../output-file.js',
+        '../../js/Client/ServiceWorkerDOM.js',
+
   			'../../js/jquery-ui.min.js',
   			'../../img/icons/General/icon_Page_Back.svg',		
   			'../../img/icons/StoryViewer/icon_SV_Page_SignLang.svg',		
   			'../../img/icons/StoryViewer/icon_SV_Page_Image.svg',		
   			'../../img/icons/StoryViewer/icon_SV_CoverImage.svg',		
-  			'../../img/icons/StoryViewer/icon_SV_ShowText.svg',		
   			'../../img/icons/StoryViewer/icon_SV_HideText.svg',		
   			'../../img/icons/General/icon_Page_Next.svg',		
   			'../../img/icons/StoryViewer/icon_SV_WrittenLang.svg',		
@@ -33,3 +28,17 @@ UpUp.start({
   			]
 });
 </script>
+
+<!--
+
+
+  ../../style/viewer.css',
+        '../../js/Client/viewerOffline.js',
+        '../../js/Client/Carousel.js',
+        '../../js/Client/StoryViewer.js',
+        '../../js/Client/HelperFunctions.js',
+        '../../js/Client/StoryPreview.js',
+
+        '../../img/icons/StoryViewer/icon_SV_ShowText.svg',   
+
+        -->
